--- a/index.html
+++ b/index.html
@@ -644,14 +644,55 @@ button.accent:hover {
     import { getFirestore, doc, setDoc, getDoc, updateDoc, collection, query, where, getDocs, addDoc } from "https://www.gstatic.com/firebasejs/9.22.2/firebase-firestore.js";
 
 
- 
-
-
-<!-- ====== FCM (Firebase Messaging) ====== -->
+ <!-- ====== FCM (Firebase Messaging) ====== -->
 <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-app-compat.js"></script>
 <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-messaging-compat.js"></script>
 
 <script>
+  // ننتظر حتى يتم تشغيل Firebase من الموديول
+  window.addEventListener("DOMContentLoaded", () => {
+    // استخدام نفس التطبيق الذي ينشئه سكربت الموديول
+    const messaging = firebase.messaging();
+
+    // تسجيل Service Worker
+    if ("serviceWorker" in navigator) {
+      navigator.serviceWorker.register("/firebase-messaging-sw.js");
+    }
+
+    // طلب الإذن + حفظ التوكن
+    window.requestNotificationPermission = async function(uid) {
+      try {
+        const token = await messaging.getToken();
+        if (!token) return;
+
+        firebase.firestore()
+          .collection("tokens")
+          .doc(uid)
+          .set({
+            uid: uid,
+            token: token,
+            date: Date.now()
+          });
+
+      } catch (e) {
+        console.log("FCM ERROR:", e);
+      }
+    };
+
+    // استقبال الإشعار داخل الموقع
+    messaging.onMessage((payload) => {
+      new Notification(payload.notification.title, {
+        body: payload.notification.body,
+        icon: "/icon.png"
+      });
+    });
+  });
+
+<!-- ====== END FCM ====== -->
+
+
+
+
   const firebaseConfigFCM = {
     apiKey: "AIzaSyDPcyxpHRuLx9T2CO4LJ-n9jaqAynUjvqw",
     authDomain: "xix5-a119a.firebaseapp.com",
@@ -659,42 +700,6 @@ button.accent:hover {
     messagingSenderId: "332265425367",
     appId: "1:332265425367:web:0a95e71d8bd0058503a392"
   };
-
-  // تشغيل FCM
-  firebase.initializeApp(firebaseConfigFCM);
-  const messaging = firebase.messaging();
-
-  // تسجيل Service Worker
-  if ("serviceWorker" in navigator) {
-    navigator.serviceWorker.register("/firebase-messaging-sw.js");
-  }
-
-  // طلب الإذن للإشعارات وحفظ التوكن
-  async function requestNotificationPermission(uid) {
-    try {
-      const token = await messaging.getToken();
-      if (!token) return;
-
-      await firebase.firestore()
-        .collection("tokens")
-        .doc(uid)
-        .set({ token: token, uid: uid, date: Date.now() });
-
-    } catch (e) {
-      console.log("FCM Error:", e);
-    }
-  }
-
-  // استقبال إشعار داخل الموقع
-  messaging.onMessage((payload) => {
-    new Notification(payload.notification.title, {
-      body: payload.notification.body,
-      icon: "/icon.png"
-    });
-  });
-
-<!-- ====== END FCM ====== -->
-
     const app = initializeApp(firebaseConfig);
     const auth = getAuth(app);
     const db = getFirestore(app);
@@ -1452,6 +1457,7 @@ document.addEventListener("DOMContentLoaded", () => {
   </script>
 </body>
 </html>
+
 
 
 
