--- a/index.html
+++ b/index.html
@@ -638,6 +638,59 @@ button.accent:hover {
       <p style="font-size:12px;color:#777;margin-top:6px;">* عند شراء هذا المنتج، يتم خصم السعر من رصيد المستخدم فقط، والكمية هي عدد/وحدة المنتج (مثل شدات/جواهر).</p>
     </div>
   </div>
+
+
+<!-- ====== FCM هنا بالضبط ====== -->
+<script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-app-compat.js"></script>
+<script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-messaging-compat.js"></script>
+
+<script>
+  window.addEventListener("DOMContentLoaded", () => {
+    const messaging = firebase.messaging();
+
+    if ("serviceWorker" in navigator) {
+      navigator.serviceWorker.register("/firebase-messaging-sw.js");
+    }
+
+    window.requestNotificationPermission = async function(uid) {
+      try {
+        if (!uid) return;
+
+        if (Notification.permission !== "granted") {
+          const permission = await Notification.requestPermission();
+          if (permission !== "granted") return;
+        }
+
+        const token = await messaging.getToken();
+        if (!token) return;
+
+        firebase.firestore()
+          .collection("tokens")
+          .doc(uid)
+          .set({
+            uid: uid,
+            token: token,
+            date: Date.now()
+          });
+
+      } catch (err) {
+        console.error("FCM ERROR:", err);
+      }
+    };
+
+    messaging.onMessage((payload) => {
+      new Notification(payload.notification.title, {
+        body: payload.notification.body,
+        icon: "/icon.png"
+      });
+    });
+
+  });
+</script>
+<!-- ====== END FCM ====== -->
+
+
+  
   <script type="module">
     import { initializeApp } from "https://www.gstatic.com/firebasejs/9.22.2/firebase-app.js";
     import { getAuth, createUserWithEmailAndPassword, signInWithEmailAndPassword, signOut, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/9.22.2/firebase-auth.js";
@@ -1409,5 +1462,6 @@ document.addEventListener("DOMContentLoaded", () => {
   </script>
 </body>
 </html>
+
 
 
